[package]
name = "clips"
description = "(More) idiomatic Rust wrapper around CLIPS-sys"
repository = "https://github.com/mtsr/clips-rs"
documentation = "https://docs.rs/clips/"
readme = "README.md"
keywords = ["clips", "rete", "rules", "rules-engine", "expert-system"]
categories = ["api-bindings"]
license = "MIT"
version = "0.2.0"
authors = ["Jonas Matser <crates@jonasmatser.nl>"]

[dependencies.clips-sys]
version = "0.1.0"

[dependencies.failure]
version = "0.1.3"

[dependencies.bitflags]
version = "1.0.4"